--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="container">
         <h1 class="text-center">Centro médico</h1>
         <p id="radiologia"></p>
-        <p id="traumatología"></p>
+        <p id="traumatologia"></p>
         <p id="dental"></p>
 
         <table class="table">
